# OpenGl

./: CMakeLists.txt  README.txt  temp.cmake
res/shaders/: basic.shader
src/: Application.cpp  MainLoops.cpp  MainLoops.h  Utils.cpp  Utils.h
